<resources>
    <string name="app_name">perkenalanku</string>
    <string name="Name">Nama</string>
    <string name="Birthday">Tempat, Tanggal Lahir</string>
    <string name="Address">Alamat</string>
    <string name="Phone">No.Telpon</string>
    <string name="Hobby">Hobi</string>
    <string name="Dream">Keinginan</string>
    <string name="Got">Lihat</string>
    <string name="Diri">BIODATA DIRI</string>
</resources>
